--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/Video.mp4" class="portfolio-box">
+                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
                         <center><img src="assests/kaloIcon300x300.png" class="img-responsive" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -235,7 +235,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/Video.mp4" class="portfolio-box">
+                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
                         <center><img src="assests/mulletIcon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -250,7 +250,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="https://drive.google.com/open?id=1YdWYNHnXMYd7yJINg3KNlewe5yrEVB_4" class="portfolio-box">
+                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
                         <center><img src="assests/haleIcon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -265,7 +265,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/Video.mp4" class="portfolio-box">
+                   <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
                         <center><img src="assests/sunAndMoonicon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -280,7 +280,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/Video.mp4" class="portfolio-box">
+                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
                         <center><img src="assests/poiPoundericon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
