--- a/index.html
+++ b/index.html
@@ -377,26 +377,14 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1801.1338252839632!2d-156.98307503300262!3d21.07241689508221!2m3!1f25.250000000000004!2f0!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x7eaac9f5d5ff4ea1%3A0x57146f1e84662ad0!2s1820+Kamehameha+V+Hwy%2C+Kaunakakai%2C+HI+96748!5e1!3m2!1sen!2sus!4v1522271617819" width="650" height="400" align="middle" frameborder="4" style="border:1" allowfullscreen></iframe>
       </div>
     </section>
+    
+    <aside>
+    <center><img src="assests/Students.JPG">
+        <h5>Powered By</h5>
+        <h6>Purple Maiʻa Kamaile Academy Students 2018</h6></center>
+    
+    </aside>
 
-    <!--<section id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
-                </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
-                </div>
-            </div>
-        </div>
-    </section>-->
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"
