--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     
     <aside>
     <center><img src="assests/Students.JPG">
-        <h5>Powered By</h5>
+        <h5>Powered By Nā Haumana</h5>
         <h6>Purple Maiʻa Kamaile Academy Students 2018</h6></center>
     
     </aside>
