Added Tiani photo and bio

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -112,6 +112,17 @@
         <p>Sarah has over a decade of experience in the finance/business sector ranging from customer service, office administration, bookkeeping, executive assistant, marketing/advertising at the Molokai Dispatch and including 3+years as a Client Service Specialist at an international mutual fund company, The Capital Group Companies.</p>
             </div>
         </div>
+             <!--Tiani-->
+             <div class="row">
+                <h3 id="homeHeading" align="center">Tiani Cook <br>Title</h3>
+        <div class="col-md-6">
+        <img src="assests/Tiani.jpg" height="400" width="325">
+        </div>
+        
+        <div class="col-md-6">
+        <p>Tiani Cook was born and raised on Molokai, Hawaii. She graduated from Mililani high school. Tiani met her husband Hana Cook, who volunteered his time at Ka Honua Momona. Tiani was hired as an intern at KHM from 2011-2014, she later moved to Avondale, Arizona to pursue her dreams in becoming a cosmetologist. Tiani graduated from Paul Mitchell School of Phoenix 2012.  She moved backed home recently to be around her friends & family. Tiani is now back at Ka Honua Momona working alongside of Noelani & staff. </p>
+            </div>
+        </div>
       </section>
     
 <!--BOD Section-->
