Added Titles for Tiani and Sarah

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -103,7 +103,7 @@
                 
                 <!--add in Sarah-->
             <div class="row">
-                <h3 id="homeHeading" align="center"> Sarah Ching <br>Title</h3>
+                <h3 id="homeHeading" align="center"> Sarah Ching <br>Manager of Operations</h3>
         <div class="col-md-6">
         <img src="assests/Staff-SarahChing.JPG" height="400" width="325">
         </div>
@@ -114,7 +114,7 @@
         </div>
              <!--Tiani-->
              <div class="row">
-                <h3 id="homeHeading" align="center">Tiani Cook <br>Title</h3>
+                <h3 id="homeHeading" align="center">Tiani Cook <br>Executive Assistant</h3>
         <div class="col-md-6">
         <img src="assests/Tiani.jpg" height="400" width="325">
         </div>
