Edited TOC section text

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <div class="container-fluid">
              <div class="row">
                 <div><h1 id="homeHeading" align="center"><font size="7">Our Theory of Change</font></h1>
-                    <center><p class="text-gray"> If you picture a kupuna (wise elder) If you picture a kupuna (wise elder)sewing a Hawaiian throw net, he starts with a maka (an eye) and slowly,but steadily, connects the aho(rope)until he has made enough rows of connections to form an entire net. We believe that participants of our programs go through a similar,iterative process, by experiencingeach of our five core principles as many times as is necessary to gain the wisdom of our kupuna.</p></center>
+                    <center><p class="text-gray">If you picture a kupuna (wise elder) sewing a Hawaiian throw net, he starts with a maka (an eye) and slowly, but steadily, connects the aho (rope) until he has made enough rows of connections to form an entire net. We believe that participants of our programs go through a similar, iterative process, by experiencing each of our five core principles as many times as is necessary to gain the wisdom of our kupuna.</p></center>
                 </div>
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
