Changed program icons to gray color

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-lightbulb-o text-primary-icon sr-icons"></i>
                        
                        
                         <h3>Energy</h3>
@@ -324,23 +324,23 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-object-group text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-object-group text-primary-icon sr-icons"></i>
                         <h3>Leadership</h3>
                         <p class="text-faded"><a href="assests/Leadership-Program.jpg" class="portfolio-box">KHM's Wa'a Shared Women's Leadership Pilot</a></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-heart text-primary-icon sr-icons"></i>
                         <h3>Families</h3>
                         <p class="text-faded"><a href="assests/Families.jpeg" class="portfolio-box">KHM's Nuakea Breastfeeding Program</a></p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-envira text-primary sr-icons"></i>
-                        <h3>Community Work Days</h3>
-                        <p class="text-faded"><a href="assests/CWD-Program.jpg" class="portfolio-box">Adopt A Month!</a></p>
+                        <i class="fa fa-4x fa-envira text-primary-icon sr-icons"></i>
+                        <h3>Education</h3>
+                        <p class="text-faded"><a href="assests/CWD-Program.jpg" class="portfolio-box">Teaching Our Next Generation</a></p>
                     </div>
                 </div>
             </div>
