Added in TOC Explanation Images

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
+                    <a href="assests/TOC/Mahuaola.png" class="portfolio-box">
                         <center><img src="assests/kaloIcon300x300.png" class="img-responsive" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -238,7 +238,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
+                    <a href="assests/TOC/Kahu.png" class="portfolio-box">
                         <center><img src="assests/mulletIcon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -253,7 +253,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
+                    <a href="assests/TOC/Kukai.png" class="portfolio-box">
                         <center><img src="assests/haleIcon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -268,7 +268,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                   <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
+                   <a href="assests/TOC/Kaimiike.png" class="portfolio-box">
                         <center><img src="assests/sunAndMoonicon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -283,7 +283,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="assests/KHMAssetsFramework.png" class="portfolio-box">
+                    <a href="assests/TOC/Hoewe.png" class="portfolio-box">
                         <center><img src="assests/poiPoundericon300x300.png" class="img-responsive" alt=""></center>
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
