cropped energy photo, added ed-photo, and changed community workday photo

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-envira text-primary-icon sr-icons"></i>
                         <h3 class=service-h3>Education</h3>
-                        <p class="text-faded"><a href="assests/CWD-Program.jpg" class="portfolio-box">Teaching Our Next Generation</a></p>
+                        <p class="text-faded"><a href="assests/Ed-Image.jpeg" class="portfolio-box">Teaching Our Next Generation</a></p>
                     </div>
                 </div>
             </div>
