edited text on about and donation page

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -74,7 +74,7 @@
                     <hr>
                     <h1 id="homeHeading" class="section-heading fromTopPadding">About Ka Honua Momona</h1>
                     <!--<hr class="light">-->
-                    <p class="text-faded">Ka Honua Momona (KHM) is a 501(c)(3) nonprofit, based on the island of Molokai. KHM’s mission is to be a model of sustainability mauka a makai (from the mountains to the sea). We seek to foster connections between all aspects of the island ecosystem, including the people and culture, and we firmly believe that Molokai can again return to abundance and become a self-sufficient model for others. Our primary long-term goals are to:
+                    <p>Ka Honua Momona (KHM) is a 501(c)(3) nonprofit, based on the island of Molokai. KHM’s mission is to be a model of sustainability mauka a makai (from the mountains to the sea). We seek to foster connections between all aspects of the island ecosystem, including the people and culture, and we firmly believe that Molokai can again return to abundance and become a self-sufficient model for others. Our primary long-term goals are to:
 
 1) Develop indigenous education systems by revitalizing natural and cultural resources;
 
